# FiveFiveLetterWords

./: .gitignore  FiveFiveLetterWords.cabal  LICENSE  Readme.md  solutions.csv  stack.yaml
app/: Main.hs
